--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="max-width=400px, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -791,7 +791,7 @@
 </div>
 <div class="section-y" id="activity" style="position: relative;">
     <div class="aty-tittle"><p></p></div>
-  <div style="position: relative; display: flex; margin-bottom: 0.7rem;">
+  <a href="#cycling" style="text-decoration: none;"><div style="position: relative; display: flex; margin-bottom: 0.7rem;">
     <div class="aty-name">
         <p class="name-aty">Cycling Tour</p>
         <p class="price-aty">$ 12 <font style="color: white; font-size: 15px;">/ person</font></p>
@@ -801,12 +801,11 @@
         <p class="week-aty">Every: Monday, Thursday & Saturday</p>
         <p class="time-dep">3:30 pm</p>
     </div>
+  </div></a>
+  <div id="cycling">
+    <div style="padding-top: 1.2rem; padding-left: 0.5rem; color: white;"><p>Cycling to the countryside, visiting a beautiful sunset.</p></div>
   </div>
-  <div style="display: flex;">
-    <div></div>
-    <div></div>
-  </div>
-  <div style="position: relative; display: flex; margin-bottom: 0.7rem;">
+  <a href="#streetfood" style="text-decoration: none;"><div style="position: relative; display: flex; margin-bottom: 0.7rem;">
     <div class="aty-name">
         <p class="name-aty">Street Food Tour</p>
         <p class="price-aty">$ 12 <font style="color: white; font-size: 15px;">/ person</font></p>
@@ -816,8 +815,11 @@
         <p class="week-aty">Every: Wednesday & Sunday</p>
         <p class="time-dep">5:30 pm</p>
     </div>
+  </div></a>
+  <div id="streetfood">
+    <div style="padding-top: 1.2rem; padding-left: 0.5rem; color: white;"><p>New experience with Cambodian Street Food Tour.</p></div>
   </div>
-  <div style="position: relative; display: flex; margin-bottom: 0.7rem;">
+  <a href="#yoga" style="text-decoration: none;"><div style="position: relative; display: flex; margin-bottom: 0.7rem;">
     <div class="aty-name">
         <p class="name-aty">Yoga Class</p>
         <p class="price-aty">Free <font style="color: white; font-size: 15px;">Join</font></p>
@@ -827,8 +829,11 @@
         <p class="week-aty">Every: Monday & Friday</p>
         <p class="time-dep">7:00 am</p>
     </div>
+  </div></a>
+  <div id="yoga">
+    <div style=" display: flex;"><p style="padding-top: 1.2rem; padding-left: 0.5rem; color: white;">improved posture, flexibility, strength, balance and body awareness.</p></div>
   </div>
-  <div style="position: relative; display: flex; margin-bottom: 0.7rem;">
+  <a href="#bracelet" style="text-decoration: none;"><div style="position: relative; display: flex; margin-bottom: 0.7rem;">
     <div class="aty-name">
         <p class="name-aty">Bracelet Class</p>
         <p class="price-aty">Free <font style="color: white; font-size: 15px;">Join</font></p>
@@ -838,8 +843,11 @@
         <p class="week-aty">Every: Wednesday & Sunday</p>
         <p class="time-dep">2:30 pm</p>
     </div>
+  </div></a>
+  <div id="bracelet">
+    <div style="padding-top: 1.2rem; padding-left: 0.5rem; color: white;"><p>Luern how to make bracelets with Onederz Activity staff</p></div>
   </div>
-  <div style="position: relative; display: flex; margin-bottom: 0.7rem;">
+  <a href="#khmerclass" style="text-decoration: none;"><div style="position: relative; display: flex; margin-bottom: 0.7rem;">
     <div class="aty-name">
         <p class="name-aty">Khmer Language</p>
         <p class="price-aty">Free <font style="color: white; font-size: 15px;">Join</font></p>
@@ -849,8 +857,11 @@
         <p class="week-aty">Every: Tuesday & Friday</p>
         <p class="time-dep">3:00 pm</p>
     </div>
+  </div></a>
+  <div id="khmerclass">
+    <div style="padding-top: 1.2rem; padding-left: 0.5rem; color: white;"><p>Study Cambodian national language</p></div>
   </div>
-  <div style="position: relative; display: flex; margin-bottom: 0.7rem;">
+  <a href="#socialnight" style="text-decoration: none;"><div style="position: relative; display: flex; margin-bottom: 0.7rem;">
     <div class="aty-name">
         <p class="name-aty">Social Night</p>
         <p class="price-aty">Free <font style="color: white; font-size: 15px;">Join</font></p>
@@ -860,8 +871,11 @@
         <p class="week-aty">Every: Monday, Wednesday & Saturday</p>
         <p class="time-dep">8:00 pm</p>
     </div>
+  </div></a>
+  <div id="socialnight">
+    <div style="padding-top: 1.2rem; padding-left: 0.5rem; color: white;"><p>Come and join us for making a new friend</p></div>
   </div>
-  <div style="position: relative; display: flex; margin-bottom: 0.7rem;">
+  <a href="#movienight" style="text-decoration: none;"><div style="position: relative; display: flex; margin-bottom: 0.7rem;">
     <div class="aty-name">
         <p class="name-aty">Movie Night</p>
         <p class="price-aty">Free <font style="color: white; font-size: 15px;">Join</font></p>
@@ -871,8 +885,11 @@
         <p class="week-aty">Every: Thursday & Sunday</p>
         <p class="time-dep">8:00 pm</p>
     </div>
+  </div></a>
+  <div id="movienight">
+    <div style="padding-top: 1.2rem; padding-left: 0.5rem; color: white;"><p>Free entrance at the restaurant</p></div>
   </div>
-  <div style="position: relative; display: flex; margin-bottom: 0.7rem;">
+  <a href="#poolparty" style="text-decoration: none;"><div style="position: relative; display: flex; margin-bottom: 0.7rem;">
     <div class="aty-name">
         <p class="name-aty">Pool Party</p>
         <p class="price-aty">Free <font style="color: white; font-size: 15px;">Join</font></p>
@@ -882,9 +899,13 @@
         <p class="week-aty">Every: Tuesday & Friday</p>
         <p class="time-dep">5:30 pm</p>
     </div>
-  </div>
-  
+  </div></a>
+  <div id="poolparty">
+    <div style="padding-top: 1.2rem; padding-left: 0.5rem; color: white;"><p>Free entrance at the bar</p></div>
+  </div>  
 
+</div>
+<div style="width: 100%; height: 80%;">
 </div>
 <div class="section-y" id="bus" style="display: flex;">
     <div class="bus-left" style="display: block;">
@@ -908,7 +929,7 @@
             <div class="card" style="max-width: 500px; height: 130px;">
                 <div class="card-front">
                     <div style="width: 100%;">
-                        <table style="text-align: center;">
+                        <table  style="text-align: center; margin-left: auto; margin-right: auto;">
                             <tr>
                                 <th style="width: 6rem;">Company</th>
                                 <th style="width: 6rem;">Departure</th>
@@ -938,7 +959,7 @@
                             <p style="padding-top: 2rem;">- Free pick up</p>
                             <p>- Booking at the reception.</p>
                         </div>
-                        <div><img src="img/giantbus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: 0.5rem;"></div>
+                        <div><img src="img/giantbus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: 0.5rem;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
@@ -974,7 +995,7 @@
                             <p style="padding-top: 2rem;">- Free pick up</p>
                             <p>- Booking at the reception.</p>
                         </div>
-                        <div><img src="img/airbus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: 0.1rem;"></div>
+                        <div><img src="img/airbus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: 0.1rem;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
@@ -1018,7 +1039,7 @@
                             <p style="padding-top: 2rem;">- Free pick up</p>
                             <p>- Booking at the reception.</p>
                         </div>
-                        <div><img src="img/minivan11.png" alt="" width="100px" style="position: absolute; bottom: 0.5rem; right: 5rem;"><img src="img/minivan13.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;"></div>
+                        <div><img src="img/minivan11.png" alt="" width="100px" style="position: absolute; bottom: 0.5rem; right: 5rem;" loading="lazy"><img src="img/minivan13.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
@@ -1056,7 +1077,7 @@
                             <p style="padding-top: 2rem;">- No pick up</p>
                             <p>- Booking at the reception.</p>
                         </div>
-                        <div><img src="img/giantbus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: 0.5rem;"></div>
+                        <div><img src="img/giantbus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: 0.5rem;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
@@ -1089,7 +1110,7 @@
                             <p>- Bus no toilet</p>
                             <p>- Booking at the reception.</p>
                         </div>
-                        <div><img src="img/hotelbus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: 0.2rem;"></div>
+                        <div><img src="img/hotelbus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: 0.2rem;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
@@ -1128,7 +1149,7 @@
                             <p>- Toilet in the bus</p>
                             <p>- Booking at the reception.</p>
                         </div>
-                        <div><img src="img/giantbus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: 0.2rem;"></div>
+                        <div><img src="img/giantbus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: 0.2rem;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
@@ -1162,7 +1183,7 @@
                             <p>- Bus no toilet</p>
                             <p>- Booking at the reception.</p>
                         </div>
-                        <div><img src="img/hotelbus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;"></div>
+                        <div><img src="img/hotelbus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
@@ -1197,7 +1218,7 @@
                             <p>- Toilet in the bus</p>
                             <p>- Booking at the reception.</p>
                         </div>
-                        <div><img src="img/luxurybus.png" alt="" width="80px" style="position: absolute; bottom: 0.5rem; right: .1rem;"></div>
+                        <div><img src="img/luxurybus.png" alt="" width="80px" style="position: absolute; bottom: 0.5rem; right: .1rem;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
@@ -1235,7 +1256,7 @@
                             <p>- Toilet in the bus</p>
                             <p>- Booking at the reception.</p>
                         </div>
-                        <div><img src="img/luxurybus.png" alt="" width="80px" style="position: absolute; bottom: 0.5rem; right: .1rem;"></div>
+                        <div><img src="img/luxurybus.png" alt="" width="80px" style="position: absolute; bottom: 0.5rem; right: .1rem;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
@@ -1284,7 +1305,7 @@
                             <p style="padding-top: 1.5rem;">- Free pick up</p>
                             <p>- Booking at the reception.</p>
                         </div>
-                        <div><img src="img/minibus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;"></div>
+                        <div><img src="img/minibus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
@@ -1349,7 +1370,7 @@
                             <p style="padding-top: 1.5rem;">- Free pick up</p>
                             <p>- Booking at the reception.</p>
                         </div>
-                        <div><img src="img/boat.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;"></div>
+                        <div><img src="img/boat.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
@@ -1386,7 +1407,7 @@
                             <p style="padding-top: 1.5rem;">- Free pick up</p>
                             <p>- Booking at the reception.</p>
                         </div>
-                        <div><img src="img/minibus.png" alt="" width="80px" style="position: absolute; bottom: 0.5rem; right: .1rem;"></div>
+                        <div><img src="img/minibus.png" alt="" width="80px" style="position: absolute; bottom: 0.5rem; right: .1rem;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
@@ -1423,7 +1444,7 @@
                             <p style="padding-top: 1.5rem;">- Free pick up</p>
                             <p>- Booking at the reception.</p>
                         </div>
-                        <div><img src="img/minibus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;"></div>
+                        <div><img src="img/minibus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
@@ -1460,7 +1481,7 @@
                             <p style="padding-top: 1.5rem;">- Free pick up</p>
                             <p>- Booking at the reception.</p>
                         </div>
-                        <div><img src="img/minibus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;"></div>
+                        <div><img src="img/minibus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
@@ -1497,7 +1518,7 @@
                             <p style="padding-top: 1.5rem;">- Free pick up</p>
                             <p>- Booking at the reception.</p>
                         </div>
-                        <div><img src="img/minibus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;"></div>
+                        <div><img src="img/minibus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
@@ -1535,7 +1556,7 @@
                             <p>- Toilet in the bus</p>
                             <p>- Booking at the reception.</p>
                         </div>
-                        <div><img src="img/giantsleepbus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;"></div>
+                        <div><img src="img/giantsleepbus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
@@ -1575,7 +1596,7 @@
                             <p style="padding-top: 1.5rem;">- Free pick up</p>
                             <p>- Booking at the reception.</p>
                         </div>
-                        <div><img src="img/giantbangkok.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;"></div>
+                        <div><img src="img/giantbangkok.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
@@ -1608,7 +1629,7 @@
                             <p style="padding-top: 1.5rem;">- Free pick up</p>
                             <p>- Booking at the reception.</p>
                         </div>
-                        <div><img src="img/bangkokbus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;"></div>
+                        <div><img src="img/bangkokbus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
@@ -1641,7 +1662,7 @@
                             <p style="padding-top: 1.5rem;">- Free pick up</p>
                             <p>- Booking at the reception.</p>
                         </div>
-                        <div><img src="img/bangkokvan.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;"></div>
+                        <div><img src="img/bangkokvan.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
@@ -1678,7 +1699,7 @@
                             <p style="padding-top: 1.5rem;">- No pick up</p>
                             <p>- Booking at the reception.</p>
                         </div>
-                        <div><img src="img/giantsleepbus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;"></div>
+                        <div><img src="img/giantsleepbus.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: .1rem;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
@@ -1739,7 +1760,7 @@
                             <p style="top: 2rem; position: absolute; left: 0.5rem;">- Free pick up (except 5:30 AM)</p>
                             <p style="top: 3.5rem; position: absolute; left: 0.5rem;">- Booking at the reception.</p>
                         </div>
-                        <div><img src="img/airportbus.png" alt="" width="150px" style="position: absolute; bottom: 0.5rem; right: .1rem;"></div>
+                        <div><img src="img/airportbus.png" alt="" width="150px" style="position: absolute; bottom: 0.5rem; right: .1rem;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
@@ -1771,7 +1792,7 @@
                             <p style="top: 2rem; position: absolute; left: 0.5rem; width: 100%;">- Booking at the reception 1 hour in advance</p>
                             <p style="top: 4.5rem; position: absolute; left: 0.5rem;">- Pick up at the hostel.</p>
                         </div>
-                        <div><img src="img/taxi.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: 0;"></div>
+                        <div><img src="img/taxi.png" alt="" width="90px" style="position: absolute; bottom: 0.5rem; right: 0;" loading="lazy"></div>
                     </div>
                 </div>
             </div>
