--- a/index.html
+++ b/index.html
@@ -739,6 +739,21 @@
     <div style="position: absolute; height: 100%; z-index: -1; filter: blur(5px);"><img src="bg-image/bg-temple.png" alt="" height="100%"></div>
   <div class="aty-tittle"><p></p></div>
   <br>
+  <div style="display: flex; position: relative;" id="floatingvillage">
+    <a href="#show-kampongphluk"><div class="far-temple-price">
+        <p class="fartemple-name" style="padding-top: 1rem;">Floating Village</p>
+        <p style="text-align: center; color: rgb(214, 202, 31); font-size: 20px;">$ 19 <font style="color: white; font-size: 15px;">/ person</font></p>
+    </div></a>
+    <div id="show-kampongphluk">
+        <p>Kampong Phluk Village</p>
+        <p>- Shared with other people</p>
+        <p>- Departure at 2:30 pm</p>
+        <p>* Big boat ticket is included. Small boat 5.50$ at the floating forest.</p>
+    </div>
+  <div class="image-activity" style="margin-left: 100px;">
+  <img src="tour/floating.png" alt="" width="100%" height="120px" loading="lazy"></div>
+</div>
+  <br>
   <div style="display: flex; position: relative;">
     <a href="#show-banteaysrei"><div class="far-temple-price">
         <p class="fartemple-name">Banteay Srei</p>
@@ -787,8 +802,61 @@
 </div>
 </div>
 
-<div style="width: 100%; height: 30%;">
+<div style="width: 100%; height: 100%;">
 </div>
+<div class="section-y">
+  <div class="aty-tittle"><p></p></div>
+  <br>
+  <div style="display: flex; position: relative;">
+    <a href="#show-ceramic"><div class="far-temple-price">
+        <p class="fartemple-name" style=" font-size: 15px;">Khmer Ceramic</p>
+        <p style="text-align: center; color: rgb(214, 202, 31); font-size: 20px;">$ 25 <font style="color: white; font-size: 15px;">/ person</font></p>
+    </div></a>
+    <div id="show-ceramic" style="padding-top: 0.5rem;">
+        <p>Learn and have fun making pottery using the potter’s wheel. Add Khmer Kbach with a master potter from Angkor to make your piece unique.</p>
+        <p>- Morning Class: 8:00 am | 10:00 am</p>
+        <p>- Afternoon Class: 2:00 pm | 4:00 pm</p>
+        <p>* Website: <a href="https://khmerceramics.com/product/pwsrp/?ref=r0100" style="color: yellow;">Khmer Ceramic</a></p>
+    </div>
+  <div class="image-activity" style="margin-left: 100px;">
+  <img src="tour/ceramic.png" alt="" width="100%" height="150px" loading="lazy"></div>
+</div>
+<br>
+<div style="display: flex; position: relative;">
+    <a href="#show-cooking"><div class="far-temple-price">
+        <p class="fartemple-name" style=" font-size: 15px;">Cooking Class</p>
+        <p style="text-align: center; color: rgb(214, 202, 31); font-size: 20px;">$ 25 <font style="color: white; font-size: 15px;">/ person</font></p>
+    </div></a>
+    <div id="show-cooking" style="padding-top: 0.5rem;">
+        <p>- Morning Class: 9:30 am - 12:30 pm</p>
+        <p>- Afternoon Class: 12:30 pm - 3:30 pm</p>
+        <p>- Evening Class: 3:30 pm - 6:30 pm</p>
+        <p>* Learn valuable tricks and tips on preparing Cambodian cuisines from your local expert and try your hands at cooking 4 authentic Khmer cuisines</p>
+    </div>
+  <div class="image-activity" style="margin-left: 100px;">
+  <img src="tour/cookingclass.png" alt="" width="100%" height="150px" loading="lazy"></div>
+</div>
+<br>
+<div style="display: flex; position: relative;">
+    <a href="#show-phare"><div class="far-temple-price">
+        <p class="fartemple-name" style="padding-top: 25px; font-size: 15px;">Phare Circus</p>
+        <p style="text-align: center; color: rgb(214, 202, 31); font-size: 15px;">$ 18 <font style="color: white; font-size: 15px;"> Seat C</font></p>
+        <p style="text-align: center; color: rgb(214, 202, 31); font-size: 15px;">$ 28 <font style="color: white; font-size: 15px;"> Seat B</font></p>
+        <p style="text-align: center; color: rgb(214, 202, 31); font-size: 15px;">$ 38 <font style="color: white; font-size: 15px;"> Seat A</font></p>
+    </div></a>
+    <div id="show-phare" style="padding-top: 0.5rem;">
+        <p>Phare Circus is a live performance with drama, dance, live music, visual arts and circus, telling stories from recent Cambodian history, folklore and modern society.</p>
+        <p>- Show start at 8:00 pm</p>
+        <p>* booking a seat at the reception</p>
+    </div>
+  <div class="image-activity" style="margin-left: 100px;">
+  <img src="tour/phare.png" alt="" width="100%" height="150px" loading="lazy"></div>
+</div>
+</div>
+
+<div style="width: 100%; height: 100%;">
+</div>
+
 <div class="section-y" id="activity" style="position: relative;">
     <div class="aty-tittle"><p></p></div>
   <a href="#cycling" style="text-decoration: none;"><div style="position: relative; display: flex; margin-bottom: 0.7rem;">
@@ -803,7 +871,7 @@
     </div>
   </div></a>
   <div id="cycling">
-    <div style="padding-top: 1.2rem; padding-left: 0.5rem; color: white;"><p>Cycling to the countryside, visiting a beautiful sunset.</p></div>
+    <div style="display: flex;"><div style="padding-top: 1.2rem; padding-left: 0.5rem; color: white; width: 70%;  ">Cycling to the countryside, visiting a beautiful sunset.</div><div style="height: 5rem;"><img src="img/cycling.png" alt="" height="100%" style="position: absolute; right: 0" loading="lazy"></div></div>
   </div>
   <a href="#streetfood" style="text-decoration: none;"><div style="position: relative; display: flex; margin-bottom: 0.7rem;">
     <div class="aty-name">
@@ -817,7 +885,7 @@
     </div>
   </div></a>
   <div id="streetfood">
-    <div style="padding-top: 1.2rem; padding-left: 0.5rem; color: white;"><p>New experience with Cambodian Street Food Tour.</p></div>
+    <div style="display: flex;"><div style="padding-top: 1.2rem; padding-left: 0.5rem; color: white; width: 70%;  ">New experience with Cambodian Street Food Tour.</div><div style="height: 5rem;"><img src="img/streetfood.png" alt="" height="100%" style="position: absolute; right: 0" loading="lazy"></div></div>
   </div>
   <a href="#yoga" style="text-decoration: none;"><div style="position: relative; display: flex; margin-bottom: 0.7rem;">
     <div class="aty-name">
@@ -831,7 +899,7 @@
     </div>
   </div></a>
   <div id="yoga">
-    <div style=" display: flex;"><p style="padding-top: 1.2rem; padding-left: 0.5rem; color: white;">improved posture, flexibility, strength, balance and body awareness.</p></div>
+    <div style="display: flex;"><div style="padding-top: 1.2rem; padding-left: 0.5rem; color: white; width: 70%; ">improved posture, flexibility, strength, balance and body awareness.</div><div style="height: 5rem;"><img src="img/yoga.png" alt="" height="100%" style="position: absolute; right: 0" loading="lazy"></div></div>
   </div>
   <a href="#bracelet" style="text-decoration: none;"><div style="position: relative; display: flex; margin-bottom: 0.7rem;">
     <div class="aty-name">
@@ -845,7 +913,7 @@
     </div>
   </div></a>
   <div id="bracelet">
-    <div style="padding-top: 1.2rem; padding-left: 0.5rem; color: white;"><p>Luern how to make bracelets with Onederz Activity staff</p></div>
+    <div style="display: flex;"><div style="padding-top: 1.2rem; padding-left: 0.5rem; color: white; width: 70%;  ">Luern how to make bracelets with Onederz Activity staff</div><div style="height: 5rem;"><img src="img/brecelet.png" alt="" height="100%" style="position: absolute; right: 0" loading="lazy"></div></div>
   </div>
   <a href="#khmerclass" style="text-decoration: none;"><div style="position: relative; display: flex; margin-bottom: 0.7rem;">
     <div class="aty-name">
@@ -859,7 +927,7 @@
     </div>
   </div></a>
   <div id="khmerclass">
-    <div style="padding-top: 1.2rem; padding-left: 0.5rem; color: white;"><p>Study Cambodian national language</p></div>
+    <div style="display: flex;"><div style="padding-top: 1.2rem; padding-left: 0.5rem; color: white; width: 70%;  ">Study Cambodian national language</div><div style="height: 5rem;"><img src="img/khmerclass.png" alt="" height="100%" style="position: absolute; right: 0" loading="lazy"></div></div>
   </div>
   <a href="#socialnight" style="text-decoration: none;"><div style="position: relative; display: flex; margin-bottom: 0.7rem;">
     <div class="aty-name">
@@ -907,7 +975,7 @@
 </div>
 <div style="width: 100%; height: 80%;">
 </div>
-<div class="section-y" id="bus" style="display: flex;">
+<div class="section-y" id="bus" style="display: flex; position: relative;">
     <div class="bus-left" style="display: block;">
         <a href="#phnompenhday" style="text-decoration: none;"><p class="link2">Phnom Penh(Day)</p></a>
         <a href="#phnompenhnight" style="text-decoration: none;"><p class="link2">Phnom Penh(Night)</p></a>
@@ -924,6 +992,7 @@
     </div>
     <div class="bus-right">
         <div style="position: absolute; z-index: -1;"><img src="bg-image/bg-bus.png" alt="" width="100%"></div>
+        <div style="position: absolute; z-index: -1; bottom: 7rem;"><img src="img/airportbus.png" alt="" width="100%"></div>
             <div id="phnompenhday">
                 <div style="text-align: center; width: 100%; margin-top: 0.5rem; height: 1.5rem; background-color: rgba(204, 211, 217, 0.716); color: rgb(31, 61, 73);"><b>To Phnom Penh (Day Bus)</b></div>
             <div class="card" style="max-width: 500px; height: 130px;">
