--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
             <div class="section-y" id="home">
 
                 <div id="popup-yoga">
-                    <div style="padding: 0.5rem; padding-top: 2rem;">
+                    <div class="popup-text">
                     <p>Yoga Class</p>
-                    <p>- Join Free</p>
+                    <p>- Free Join</p>
                     <p>- From 7:00 AM - 8:00 AM</p>
-                    <p>8 Sign up at the reception.</p>
+                    <p>* Sign up at the reception. We have a limited number of people to join.</p>
                     </div>
                     <a href="#"><span id="popup-close">✖</span></a>
                 </div>
                 <div id="popup-cycling">
-                    <div style="padding: 0.5rem; padding-top: 2rem;">
+                    <div class="popup-text">
                     <p>Cycling Tour to Countryside</p>
                     <p>- 12 USD / person</p>
                     <p>- Departure 3:30 PM</p>
@@ -86,7 +86,7 @@
                     <a href="#"><span id="popup-close">✖</span></a>
                 </div>
                 <div id="popup-social">
-                    <div style="padding: 0.5rem; padding-top: 2rem;">
+                    <div class="popup-text">
                     <p>Social Night</p>
                     <p>- Free Join</p>
                     <p>- From 8:00 PM - 9:00 PM</p>
@@ -95,16 +95,16 @@
                     <a href="#"><span id="popup-close">✖</span></a>
                 </div>
                 <div id="popup-khmer">
-                    <div style="padding: 0.5rem; padding-top: 2rem;">
+                    <div class="popup-text">
                     <p>Khmer Language Class</p>
                     <p>- Free Join</p>
                     <p>- From 3:00 PM - 4:00 PM</p>
-                    <p>* Sign up at the reception.</p>
+                    <p>* Sign up at the reception. We have a limited number of people to join.</p>
                     </div>
                     <a href="#"><span id="popup-close">✖</span></a>
                 </div>
                 <div id="popup-pool">
-                    <div style="padding: 0.5rem; padding-top: 2rem;">
+                    <div class="popup-text">
                     <p>Pool Party</p>
                     <p>- Free entrance at the bar</p>
                     <p>- From 5:30 PM - 9:30 PM</p>
@@ -115,16 +115,16 @@
                     <a href="#"><span id="popup-close">✖</span></a>
                 </div>
                 <div id="popup-bracelet">
-                    <div style="padding: 0.5rem; padding-top: 2rem;">
+                    <div class="popup-text">
                     <p>Bracelet Class</p>
                     <p>- Free Join</p>
                     <p>- From 2:30 PM - 3:30 PM</p>
-                    <p>* Sign up at the reception.</p>
+                    <p>* Sign up at the reception. We have a limited number of people to join.</p>
                     </div>
                     <a href="#"><span id="popup-close">✖</span></a>
                 </div>
                 <div id="popup-streetfood">
-                    <div style="padding: 0.5rem; padding-top: 2rem;">
+                    <div class="popup-text">
                     <p>Steet Food Tour</p>
                     <p>- 12 USD / person</p>
                     <p>- Departure 5:30 PM</p>
@@ -134,7 +134,7 @@
                     <a href="#"><span id="popup-close">✖</span></a>
                 </div>
                 <div id="popup-movie">
-                    <div style="padding: 0.5rem; padding-top: 2rem;">
+                    <div class="popup-text">
                     <p>Movie Night</p>
                     <p>- Free entrance at the restaurant</p>
                     <p>- From 8:00 PM - 9:00 PM</p>
@@ -142,7 +142,7 @@
                     <a href="#"><span id="popup-close">✖</span></a>
                 </div>
                 <div id="popup-home-floating">
-                    <div style="padding: 0.5rem; padding-top: 2rem;">
+                    <div class="popup-text">
                     <p>Floating Village (Kampong Pluk)</p>
                     <p>- 19 USD / person</p>
                     <p>- Departure 2:30 PM</p>
@@ -803,7 +803,7 @@
     </div>
         <div id="tour" style="position: relative;">
             <div id="popup-srg">
-                <div style="padding: 0.5rem; padding-top: 2rem;">
+                <div class="popup-text">
                 <p>Small Circuit Sunrise with English Guide</p>
                 <p>- 12 USD / person</p>
                 <p>- Shared with other poeple</p>
@@ -819,7 +819,7 @@
                 <a href="#"><span id="popup-close">✖</span></a>
             </div>
             <div id="popup-sr">
-                <div style="padding: 0.5rem; padding-top: 2rem;">
+                <div class="popup-text">
                 <p>Small Circuit Tour Sunrise</p>
                 <p>- 6 USD / person</p>
                 <p>- Shared with other poeple</p>
@@ -835,7 +835,7 @@
                 <a href="#"><span id="popup-close">✖</span></a>
             </div>
             <div id="popup-s">
-                <div style="padding: 0.5rem; padding-top: 2rem;">
+                <div class="popup-text">
                 <p>Small Circuit Tour</p>
                 <p>- 15 USD / Tuk Tuk (max: 3 people) </br>(3 USD extra sunset or sunrise)</p>
                 <p>- Private Transportation</p>
@@ -851,7 +851,7 @@
                 <a href="#"><span id="popup-close">✖</span></a>
             </div>
             <div id="popup-gs">
-                <div style="padding: 0.5rem; padding-top: 2rem;">
+                <div class="popup-text">
                 <p>Grand Circuit Tour Sunset</p>
                 <p>- 7 USD / person</p>
                 <p>- Shared with other poeple</p>
@@ -867,7 +867,7 @@
                 <a href="#"><span id="popup-close">✖</span></a>
             </div>
             <div id="popup-g">
-                <div style="padding: 0.5rem; padding-top: 2rem;">
+                <div class="popup-text">
                 <p>Grand Circuit Tour</p>
                 <p>- 18 USD / Tuk Tuk (max: 3 people) </br>(3 USD extra sunset or sunrise)</p>
                 <p>- Private Transportation</p>
@@ -883,7 +883,7 @@
                 <a href="#"><span id="popup-close">✖</span></a>
             </div>
             <div id="popup-f">
-                <div style="padding: 0.5rem; padding-top: 2rem;">
+                <div class="popup-text">
                 <p>Floating Village (Kampong Phluk)</p>
                 <p>- 19 USD / person</p>
                 <p>- Shared with other people</p>
@@ -895,7 +895,7 @@
                 <a href="#"><span id="popup-close">✖</span></a>
             </div>
             <div id="popup-bs">
-                <div style="padding: 0.5rem; padding-top: 2rem;">
+                <div class="popup-text">
                 <p>Banteay Srei Temple</p>
                 <p>- 25 USD / Tuk Tuk</p>
                 <p>- Private Transportation</p>
@@ -907,7 +907,7 @@
                 <a href="#"><span id="popup-close">✖</span></a>
             </div>
             <div id="popup-bm">
-                <div style="padding: 0.5rem; padding-top: 2rem;">
+                <div class="popup-text">
                 <p>Beng Mealea Temple</p>
                 <p>- 35 USD / Tuk Tuk</p>
                 <p>- 70 USD / Car</p>
@@ -921,7 +921,7 @@
                 <a href="#"><span id="popup-close">✖</span></a>
             </div>
             <div id="popup-kk">
-                <div style="padding: 0.5rem; padding-top: 2rem;">
+                <div class="popup-text">
                 <p>Koh Ker Temple</p>
                 <p>- 120 USD / Car</p>
                 <p>- Private Transportation</p>
@@ -933,7 +933,7 @@
                 <a href="#"><span id="popup-close">✖</span></a>
             </div>
             <div id="popup-ph">
-                <div style="padding: 0.5rem; padding-top: 2rem;">
+                <div class="popup-text">
                 <p>Phare the Cambodia Circus</p>
                 <p>- 18 USD Seat C</p>
                 <p>- 28 USD Seat B</p>
@@ -946,7 +946,7 @@
                 <a href="#"><span id="popup-close">✖</span></a>
             </div>
             <div id="popup-cr">
-                <div style="padding: 0.5rem; padding-top: 2rem;">
+                <div class="popup-text">
                 <p>Khmer Ceramic Pottery Class</p>
                 <p>- 25 USD / person</p>
                 <p>- Morning Time: 08:00 am | 10:00 am </p>
@@ -963,7 +963,7 @@
                 <a href="#"><span id="popup-close">✖</span></a>
             </div>
             <div id="popup-ck">
-                <div style="padding: 0.5rem; padding-top: 2rem;">
+                <div class="popup-text">
                 <p>Khmer Cooking Class</p>
                 <p>- 25 USD / person</p>
                 <p>- Morning Time: 09:30 am - 12:30 pm </p>
