--- a/index.html
+++ b/index.html
@@ -1777,10 +1777,7 @@
     </div>
     </div>
     </div>
-    
-        </div>
-
-        <div class="tour-right">
+    <div style="flex: none; width: 100%; position: relative;">
 
             <div id="popup-yoga">
                 <div class="popup-text" style="display: flex;">
@@ -1896,7 +1893,12 @@
             </div>
                 <a href="#home-2"><span id="popup-close">✖</span></a>
             </div>
-            </div>
+
+    </div>
+    
+        </div>
+
+
 
 
 
