--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div style="margin: 0.5rem; position: absolute;"><img src="img/onederz-logo.png" alt="" width="70px" loading="lazy"></div>
+    <div style="position:absolute;
+    top: 0;
+    left: 0;
+    right:0;
+    max-width:600px;
+    margin:auto;"><img src="img/onederz-logo.png" alt="" width="70px" loading="lazy" style="margin: 0.5rem;"></div>
     <div class="area">
         <ul class="circles">
                 <li></li>
@@ -929,7 +934,7 @@
     
         <div class="slide-container">
     <div id="slide-event-today">
- <div class="date-today"> Today Activity : <span id="current_day"></span> <span id="current_month"></span> <span id="current_year"></span></div>
+ <div class="date-today"> Today Activity : <span id="current_day_2"></span> <span id="current_month_2"></span> <span id="current_year_2"></span></div>
             <div class="0 slide-event" style="display:none">
 
                 <div class="main-wrapper">
@@ -1353,7 +1358,7 @@
     </div>
     
     <div id="slide-event-tomorrow">
-<div class="date-tmr"> Tomorrow Activity : <span id="current_day_tmr"></span> <span id="current_month_tmr"></span> <span id="current_year_tmr"></span></div>
+<div class="date-tmr"> Tomorrow Activity : <span id="current_day_tmr_2"></span> <span id="current_month_tmr_2"></span> <span id="current_year_tmr_2"></span></div>
 <div class="6 slide-event" style="display:none">
 
     <div class="main-wrapper">
